--- a/src/sass/queries/queries.sass
+++ b/src/sass/queries/queries.sass
@@ -123,6 +123,9 @@
         font-size: 2.3rem !important
         line-height: 60px !important
 
+    .about-bg
+        background-position: center center !important
+
     .section-header
         font-size: 1rem
 
